fix bug 257735, wrong error message when error saving to draft folder, and retry saves to sent folder, r=standard8